# ANTsPyT1w

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
antspyt1w/: __init__.py  deep_dkt.py  deep_hippo.py  get_data.py  hemi_reg.py  t1_hypointensity.py
applications/: basal_forebrain_multiatlas_example_SR_first.py  bf_star.py  brain_ext.py  cit168_one_template_example.py  cit168_one_template_example_SR_first.py  collect_bfstar_data.py  collect_ppmi_volumes.py  collect_ppmi_volumes_direct_reg_seg_mjff_20210401.py  collect_ppmi_volumes_direct_reg_seg_mjff_cst.py  collect_ppmi_volumes_simple_reg.py  collect_ppmi_volumes_v2.py  cst_and_supplementary_motor_cortex.py  deep_dkt.py  direct_registration_and_sr.py  dkt_multiatlas_example_SR_first.py  evaluate_DKT_dice_overlap_cv.py  evaluate_OASIS_TRT_20_BF.py  general_validation.py  get_dice_scores.py  get_institutions.py  hemi_sr.py  prepare_metadata.py
configs/: basal_forebrain_multiatlas_example_SR_first.json  basalforebrain_v02.json  basalforebrain_v03.json  brainext.json  cit168_one_template_example.json  deep_dkt_left.json  deep_dkt_right.json  deep_hippo.json  hemi_sr.json  ppmi_cst.json  ppmi_left.json  ppmi_left_2.json  ppmi_right.json  ppmi_right_2.json  ppmi_simple.json  ppmi_simple_2.json  ppmi_simple_20210326.json  ppmi_simple_20210326_cst.json  ppmi_simple_20210401.json  ppmi_simple_20210401_cst.json  ppmi_simple_20210406.json  ppmi_simple_3.json  randombasis_proj.json  test_basalforebrain.json  test_config.json  val_basalforebrain.json  val_deep_dkt.json
data_def/: adni_eisai.json  adni_eisai_bxt.json  adni_eisai_hemisr.json  all_adni.json  t1_ppmi.json  test_adni_eisai.json  test_adni_eisai_bxt.json  test_adni_eisai_hemisr.json
deploy/: README.md  bf_star.py  brain_ext.py  cst_and_supplementary_motor_cortex.py  deep_dkt.py  deep_hippocampus.py  deploy_job.sh  direct_reg_and_sr.py  hemi_reg.py  hemi_sr.py  localjlf.py  randombasis_projection.py
docs/: antspyt1w_data_dictionary.csv
ext/: get_commit.py
superiq/: __init__.py  basalforebrain_seg.py  collect_volume_files.py  deep_dkt.py  pipeline_utils.py  super_resolution_segmentation_per_label.py  super_resolution_segmentation_with_probabilities.py
tests/: reference_run.py  test_00_setup.py  test_deep_dkt.py  test_deep_hipp.py  test_localsyn.py  test_mtl.py  test_pipeline_utils.py  test_reference_run.py  test_segmentation.py  (+6 more)
(+22 files in other folders)
