[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antspyt1w"
version = "1.0.1"
description = "T1w human neuroimage processing with antspyx"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Avants, Gosselin, Tustison", email = "stnava@gmail.com" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

dependencies = [
    "h5py>=3.10.0",
    "numpy>=1.19.4",
    "pandas>=1.0.1",
    "antspyx>=0.6.1",
    "antspynet>=0.2.9",
    "tensorflow-probability>=0.22.0",
    "tensorflow>=2.11.0",
    "pathlib",
    "PyNomaly>=0.3.3",
    "pytest>=8.0.1",
    "scipy",
    "pillow",
    "matplotlib"
]

[project.urls]
homepage = "https://github.com/stnava/ANTsPyT1w"

[tool.setuptools.packages]
find = { include = ["antspyt1w"] }

[tool.setuptools]
license-files = []
